--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,9 @@ img {
 input {
   height: 36px;
   width: 300px;
+  padding-left: 12px;
   border: 1px solid #030360;
+  color: #030360;
   border-radius: 6px;
   outline: 1px solid transparent;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -91,6 +93,7 @@ input:focus {
   background-color: #f0f8ff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .search:hover,
@@ -100,10 +103,11 @@ input:focus {
 }
 
 .load-more {
+  display: block;
   margin: auto;
   margin-bottom: 60px;
   min-width: 100px;
-  height: 48px;
+  height: 40px;
   border-radius: 4px;
   padding: 12px 24px;
   border: 1px solid #030360;
@@ -112,6 +116,11 @@ input:focus {
   background-color: #f0f8ff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
 }
 
 .load-more:hover,
